apps/biblora/pay/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biblora-pay
  namespace: biblora
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: biblora-pay
  template:
    metadata:
      labels:
        app: biblora-pay
    spec:
      containers:
        - name: pay
          image: ghcr.io/agogos-llc/biblora-pay:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
