apps/biblora/pay/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biblora-pay-ingress
  namespace: biblora
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m" # Important for Admin Upload Tool
spec:
  tls:
    - hosts:
        - biblora-pay.churchlify.com # Replace with your local or public domain
      secretName: biblora-pay-tls
    - hosts:
        - pay.biblora.cc
      secretName: biblora-pay-cc-tls
  rules:
    - host: biblora-pay.churchlify.com # Replace with your local or public domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: biblora-pay
                port:
                  number: 3000
    - host: pay.biblora.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: biblora-pay # Points to the same service
                port:
                  number: 3000
